<resources>
    <string name="app_name">Code95Weather</string>
    <string name="offline_fragment_label">Offline Fragment</string>
    <string name="today_fragment_label">Today Fragment</string>
    <string name="setting_fragment_label">Setting Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="enter_location">Enter City</string>
    <string name="enter_unit">Enter unit</string>
    <string name="today">Today</string>
    <string name="_7_days">7 days</string>
    <string name="metric">℃</string>
    <string name="imperial">℉</string>
    <string name="percent">%</string>
    <string name="location">Location</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="degree">°</string>
    <string name="feel_like">Feels like:</string>
    <string name="km_h">Km/h</string>
    <string name="icon">icon</string>
    <string name="wind_speed">Wind speed</string>
    <string name="humidity">Humidity</string>
    <string name="min_max">min/max</string>
    <string name="setting">Setting</string>
    <string name="default_unit">Default Unit:</string>
    <string name="default_city">Default City:</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="set">Set</string>
    <string name="back">Home</string>
    <string name="select_application">Select Application</string>
    <string name="please_update">Please update the app</string>
    <string name="saved">Saved</string>
    <string name="shared_city">London</string>
    <string name="city_option">City (*):</string>
    <string name="add_correct_city_name">Result: Add the correct city name.</string>
    <string name="optional">*Optional</string>
    <string name="select_city">Select city</string>
    <string name="checking_the_connection_again">Press here to check the connection again?</string>
    <string name="back_online">Back online</string>
    <string name="disconnected">You are disconnected</string>
    <string name="last_update_on">Last update on:</string>
    <string name="search">Search...</string>
    <string name="you_are_on_offline_mode">You are on Offline Mode</string>
</resources>