<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".fragments.OfflineFragment">

    <TextView
        android:id="@+id/tvShowOffline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/you_are_on_offline_mode"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvShowOffline"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/layoutOffline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:visibility="gone">


            <TextView
                android:id="@+id/tvSelectOfflineCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:padding="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvOfflineDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSelectOfflineCity"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvOfflineDate"
                android:background="@android:color/transparent">

                <ImageView
                    android:id="@+id/imgOffline"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/icon" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/imgOffline">


                    <TextView
                        android:id="@+id/tvOfflineDegree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvOfflineFeelLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvOfflineDegree"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/layoutMinMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvOfflineFeelLike"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true">


                        <TextView
                            android:id="@+id/tvOfflineMinMax"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="4dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/tvOfflineMinMax"
                            android:text="@string/min_max"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/white" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvOfflineDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/layoutMinMax"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/layoutWindHum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvOfflineDesc">

                        <RelativeLayout
                            android:id="@+id/layoutWind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true">

                            <TextView
                                android:id="@+id/tvOfflineWind"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvOfflineWind"
                                android:layout_centerHorizontal="true"
                                android:text="@string/wind_speed"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/layoutHum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="16dp">

                            <TextView
                                android:id="@+id/tvOfflineHum"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/tvOfflineHum"
                                android:layout_centerHorizontal="true"
                                android:text="@string/humidity"
                                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                                android:textColor="@color/white" />

                        </RelativeLayout>


                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>

    <ImageView
        android:id="@+id/imgNoInternet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/disconnected"
        android:src="@drawable/nointernet" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"
        android:background="@android:color/transparent"
        android:contentDescription="@string/checking_the_connection_again"
        app:srcCompat="@drawable/ic_baseline_connected_tv" />
</RelativeLayout>