<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_500"
    tools:context=".fragments.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutSetting"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgTitle"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                android:src="@drawable/icon" />

            <RelativeLayout
                android:id="@+id/layoutSettingUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgTitle"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tvTitleUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:text="@string/default_unit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSettingMetric"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/metric"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSettingImperial"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imperial"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/darker_gray"

                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSettingCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingUnit"
                android:layout_marginBottom="8dp">


                <TextView
                    android:id="@+id/tvTitleCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"

                    android:text="@string/default_city"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toEndOf="@+id/tvTitleCity"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:hint="@string/enter_location"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSettingCity1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingCity"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/tvTitleCity1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:text="@string/city_option"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCity1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/imgBtnDel1"
                    android:layout_toEndOf="@+id/tvTitleCity1"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"

                    android:hint="@string/enter_location"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/imgBtnDel1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_outline_delete" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSettingCity2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingCity1"
                android:layout_marginBottom="8dp">


                <TextView
                    android:id="@+id/tvTitleCity2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"

                    android:text="@string/city_option"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/imgBtnDel2"
                    android:layout_toEndOf="@+id/tvTitleCity2"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:hint="@string/enter_location"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/imgBtnDel2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_outline_delete" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSettingCity3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingCity2"
                android:layout_marginBottom="8dp">


                <TextView
                    android:id="@+id/tvTitleCity3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"

                    android:text="@string/city_option"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCity3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/imgBtnDel3"
                    android:layout_toEndOf="@+id/tvTitleCity3"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:hint="@string/enter_location"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/imgBtnDel3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_outline_delete" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutSettingCity4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingCity3"
                android:layout_marginBottom="8dp">


                <TextView
                    android:id="@+id/tvTitleCity4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"

                    android:text="@string/city_option"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etCity4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="4dp"
                    android:layout_toStartOf="@+id/imgBtnDel4"
                    android:layout_toEndOf="@+id/tvTitleCity4"
                    android:background="@drawable/rounded_background"
                    android:gravity="center"
                    android:hint="@string/enter_location"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete"
                    android:padding="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/white" />

                <ImageButton
                    android:id="@+id/imgBtnDel4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_outline_delete" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvOptional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutSettingCity4"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:text="@string/optional"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp">


        <TextView
            android:id="@+id/tvSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/set"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_check_circle" />


        <TextView
            android:id="@+id/tvExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_power_settings_new" />


        <TextView
            android:id="@+id/tvBackHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/back"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_baseline_home" />

    </RelativeLayout>
</RelativeLayout>